--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-
     compile 'com.getbase:floatingactionbutton:1.10.1'
-
     compile 'com.commonsware.cwac:anddown:0.2.+'
-
     compile 'io.reactivex:rxjava:1.1.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
 }
