--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".view.activity.MdNoteActivity"/>
+        <activity android:name=".view.activity.MdNoteActivity" />
+        <activity android:name=".view.activity.ReviewActivity" />
+        <activity android:name=".view.activity.HandWriteActivity"></activity>
     </application>
 
 </manifest>
