--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
     compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.balysv:material-ripple:1.0.2'
 }
